--- a/css/style.css
+++ b/css/style.css
@@ -58,3 +58,38 @@ body {
 .black {
     background-color: black;
 }
+
+.color-picker {
+    display: flex;
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    padding: 0 10px;
+    background-color: rgba(0, 0, 0, 0.2);
+}
+
+.color {
+    width: 20px;
+    height: 20px;
+    border: 2px solid #444 ;
+    margin: 10px 2px;
+    border-radius: 50%;
+    background-color: #fff;
+}
+
+.pixel--empty {
+    background-color: #ccc;
+}
+
+.pixel--plain {
+    background-color: #333;
+}
+
+.pixel--light {
+    background-color: #FBC048;
+}
+
+.pixel--highlight {
+    background-color: #79EA83;
+
+}
